<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/back"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:scrollbarAlwaysDrawVerticalTrack="false"
    tools:context="com.example.welldone.authentification.RegisterActivity" >

    <!-- Login progress -->

    <ImageView
        android:layout_width="119dp"
        android:layout_height="73dp"
        android:layout_marginTop="80dp"
        android:layout_weight="0.30"
        android:src="@drawable/welldone" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:background="@drawable/text_back"
        android:orientation="vertical" >

        <AutoCompleteTextView
            android:id="@+id/firstname_register"
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/perm_group_accounts"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/firstname"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:singleLine="true" />

        <AutoCompleteTextView
            android:id="@+id/lastname_register"
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/perm_group_accounts"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/lastname"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:singleLine="true" />

        <AutoCompleteTextView
            android:id="@+id/email_register"
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/sym_action_email"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/prompt_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" >

            <requestFocus />
        </AutoCompleteTextView>

        <EditText
            android:id="@+id/password_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@android:drawable/ic_lock_lock"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />
        
        <EditText
            android:id="@+id/password_wh_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@android:drawable/ic_lock_lock"
            android:ems="10"
            android:hint="@string/prompt_password_wh"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

        <Button
            android:id="@+id/button_register"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/highlighted_text_material_dark"
            android:text="Registrieren"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:layout_weight="1.99"
        android:orientation="vertical" >
    </LinearLayout>

</LinearLayout>